# blocktest

./: .gitignore  .mailmap  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  config.xml  workspace.code-workspace
.ci/: install_debian.sh  script.sh
cmake/: FetchPugixml.cmake  FetchTinyProcessLibrary.cmake  blocktestcoreConfig.cmake
doc/: map.xmind  test.pptx
dockerfiles/: Dockerfile  DockerfileRos2  README.md  ros2_entrypoint.sh  yarp.conf
genericactiondepotlib/: CMakeLists.txt
genericactiondepotlib/include/: actionExecute.h  actionNow.h  actionUpdateFile.h  genericActionDepotStart.h
genericactiondepotlib/src/: actionExecute.cpp  actionExecute.h  actionNop.cpp  actionNop.h  actionNow.cpp  actionNow.h  actionUpdateFile.cpp  actionUpdateFile.h  actionWait.cpp  actionWait.h  genericActionDepotStart.cpp  genericActionDepotStart.h
gzworld/: icub.world
include/: action.h  actionDepotStart.h  actionRegister.h  blockTest.h  command.h  dataLogger.h  (+12 more)
scriptbuilder/: CMakeLists.txt  README.md  ScriptBuilder.pro  actiontreemodel.cpp  actiontreemodel.h  comboboxitemdelegate.cpp  comboboxitemdelegate.h  librarymodel.cpp  librarymodel.h  loggermodel.cpp  loggermodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parametercommentmodel.cpp  parametercommentmodel.h  parameterslistmodel.cpp  parameterslistmodel.h  prerequisitemodel.cpp  prerequisitemodel.h  pugixml.hpp  resource.qrc  scripttreemodel.cpp  scripttreemodel.h  settingdialog.cpp  settingdialog.h  settingdialog.ui  spinboxdelegate.cpp  spinboxdelegate.h  testsdepotmodel.cpp  testsdepotmodel.h
scriptbuilder/ScriptBuilder/: ScriptBuilder.pro  actiontreemodel.cpp  actiontreemodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parametercommentmodel.cpp  parameterslistmodel.cpp  parameterslistmodel.h  pugixml.cpp  resource.qrc  scripttreemodel.cpp  scripttreemodel.h  testsdepotmodel.cpp  testsdepotmodel.h
scriptbuilder/xmltemplate/: parameters.xml
scriptbuilder/xmltemplate/general/: execute.xml  parameters.xml
scriptbuilder/xmltemplate/yarp/: parameters.xml  yarpresetpose.xml
src/: CMakeLists.txt  action.cpp  action.h  actionDepotStart.cpp  actionDepotStart.h  actionRegister.h  api.h  blockTest.cpp  blockTest.h  clockFacility.cpp  clockFacility.h  command.cpp  command.h  dataLogger.cpp  dataLogger.h  fixture.cpp  fixture.h  general.h  infoLogger.cpp  infoLogger.h  libraryLoader.cpp  libraryLoader.h  logconst.h  logger.cpp  logger.h  loggerRegister.h  main.cpp  report.cpp  report.h  scheduler.cpp  scheduler.h  table.cpp  table.h  tableExpression.cpp  tableExpression.h  tableIncrement.cpp  tableIncrement.h  tableNormal.cpp  tableWave.cpp  tableWave.h  (+7 more)
src/blocktestcore/: CMakeLists.txt  action.cpp  action.h  actionDepotStart.h  actionRegister.h  clockFacility.cpp  clockFacility.h  command.cpp  command.h  connection.cpp  connection.h  dataLogger.cpp  dataLogger.h  exprtk.hpp  fixture.cpp  fixture.h  general.cpp  general.h  libraryLoader.cpp  libraryLoader.h  logconst.h  logger.cpp  logger.h  loggerRegister.h  report.cpp  report.h  server.cpp  server.h  sintax.h  syntax.h  table.h  tableIncrement.cpp  tableIncrement.h  tableNormal.cpp  tableNormal.h  tableVariable.cpp  tableVariable.h  tableWave.cpp  tables.cpp  tables.h  (+6 more)
src/blocktestexecutor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
src/blocktestrunner/: CMakeLists.txt  blockTestRunner.cpp  blockTestRunner.h  command.cpp  command.h  connection.cpp  connection.h  fixture.cpp  fixture.h  libraryLoader.cpp  libraryLoader.h  main.cpp  server.cpp  server.h  test.cpp  test.h  testsDepot.cpp  testsDepot.h
src/genericactiondepotlib/: CMakeLists.txt
src/genericactiondepotlib/src/: actionExecute.cpp  actionExecute.h  actionFindInFile.cpp  actionFindInFile.h  actionNop.cpp  actionNop.h  actionNow.cpp  actionNow.h  actionPrint.cpp  actionPrint.h  actionUpdateFile.cpp  actionUpdateFile.h  actionWait.cpp  actionWait.h  actionWriteSerial.cpp  actionWriteSerial.h  genericActionDepotStart.cpp  genericActionDepotStart.h
src/scriptbuilder/: CMakeLists.txt  README.md  ScriptBuilder.pro  actiontreemodel.cpp  actiontreemodel.h  comboboxitemdelegate.cpp  librarymodel.cpp  librarymodel.h  loggermodel.cpp  loggermodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parametercommentmodel.cpp  parametercommentmodel.h  parameterslistmodel.cpp  prerequisitemodel.cpp  prerequisitemodel.h  pugiconfig.hpp  resource.qrc  scripttreemodel.cpp  scripttreemodel.h  settingdialog.ui  spinboxdelegate.cpp  testsdepotmodel.cpp
src/scriptbuilder/xmltemplate/: parameters.xml  print.xml
src/scriptbuilder/xmltemplate/general/: execute.xml  findinfile.xml  nop.xml  parameters.xml  print.xml  updatefile.xml  wait.xml
src/unittest/: CMakeLists.txt  gtest_main.cc  main.cpp  test1.cpp  test2.cpp
yarpactiondepotlib/: CMakeLists.txt
yarpactiondepotlib/include/: ClockServer.h  actionApplyForce.h  actionCheckPosition.h  actionCheckRobot.h  actionCheckVertical.h  actionPrepareStraightWalking.h  actionResetPose.h  actionSendPosition.h  actionSendPwm.h  actionYarp.h  actionYarpWait.h  infoLoggerYarp.h  yarpActionDepotStart.h
yarpactiondepotlib/src/: ClockServer.cpp  actionApplyForce.cpp  actionApplyForce.h  actionCheckComDistance.cpp  actionCheckComDistance.h  actionCheckJointPosition.cpp  actionCheckJointPosition.h  actionCheckPosition.cpp  actionCheckPosition.h  actionCheckRobot.cpp  actionCheckRobot.h  actionCheckVertical.cpp  actionCheckVertical.h  actionGenerateTrajectory.cpp  actionGenerateTrajectory.h  actionPrepareStraightWalking.cpp  actionPrepareStraightWalking.h  actionReset.cpp  actionReset.h  actionResetPose.cpp  actionResetPose.h  actionResetWalking.cpp  actionResetWalking.h  actionSendDirectPosition.cpp  actionSendDirectPosition.h  actionSendPosition.cpp  actionSendPosition.h  actionSendPwm.cpp  actionSendPwm.h  actionSendPwmTrain.cpp  actionSendPwmTrain.h  actionSetVelocity.cpp  actionSetVelocity.h  actionStartWalking.cpp  actionStartWalking.h  actionYarp.cpp  actionYarp.h  actionYarpNow.cpp  actionYarpNow.h  actionYarpWait.cpp  (+5 more)
(+99 files in other folders)
